Colab を使用して作成されました

--- a/Basics_of_Python.ipynb
+++ b/Basics_of_Python.ipynb
@@ -55,7 +55,7 @@
         "    right(30)\n",
         "    draw_stick(l, w)\n",
         "    left(15)\n",
-        "  \n",
+        "\n",
         "def draw_stick(l, w):\n",
         "    width(w)\n",
         "    forward(l)\n",
@@ -434,7 +434,7 @@
         "## 複合データ型\n",
         "\n",
         "これまでは `a = 1` のように 1 つの変数に 1 つの値を代入する場合を扱ってきましたが、複数の値をまとめて取り扱いたい場面もあります。\n",
-        "Python では複数の変数や値をまとめて扱うのに便利な、以下の 3 つの複合データ型があります。\n",
+        "Python では複数の変数や値をまとめて扱うのに便利な、以下の 3 つの複合データ型があります。ここではリストだけ取り扱います。\n",
         "\n",
         "- リスト (list)\n",
         "- タプル (tuple)\n",
@@ -457,10 +457,10 @@
       "cell_type": "code",
       "source": [
         "# リスト型の変数を定義\n",
-        "numbers = [4, 5, 6, 7]\n",
+        "letters = ['p', 'r', 'o', 'g', 'r', 'a', 'm', 'm', 'i', 'n', 'g']\n",
         "\n",
         "# 値の確認\n",
-        "print(numbers)"
+        "print(letters)"
       ],
       "metadata": {
         "id": "MJ7ZYj82D-a1"
@@ -472,7 +472,7 @@
       "cell_type": "code",
       "source": [
         "# 型の確認\n",
-        "type(numbers)"
+        "type(letters)"
       ],
       "metadata": {
         "id": "HH3NT-y4EC4Z"
@@ -486,7 +486,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "`numbers` には 4 つの数値が入っており、**要素数** は 4 です。\n",
+        "`letters` には 11 つの文字列が入っており、**要素数** は 11 です。\n",
         "リストの要素数は、リストの**長さ (length)** とも呼ばれ、組み込み関数の `len()` を用いて取得することができます。\n",
         "`len()` はよく使う関数であるため、覚えておきましょう。"
       ]
@@ -495,7 +495,7 @@
       "cell_type": "code",
       "source": [
         "# 要素数の確認\n",
-        "len(numbers)"
+        "len(letters)"
       ],
       "metadata": {
         "id": "DK6aH0AaoELi"
@@ -525,7 +525,7 @@
       "cell_type": "code",
       "source": [
         "# 先頭の要素にアクセス\n",
-        "numbers[0]"
+        "letters[0]"
       ],
       "execution_count": null,
       "outputs": []
@@ -537,7 +537,7 @@
       "cell_type": "code",
       "source": [
         "# 先頭から3番目の要素にアクセス\n",
-        "numbers[2]"
+        "letters[2]"
       ],
       "execution_count": null,
       "outputs": []
@@ -549,19 +549,10 @@
       "cell_type": "code",
       "source": [
         "# 2 番目の要素を書き換え\n",
-        "numbers[1] = 10"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "AXpG-tqNv9cg"
-      },
-      "cell_type": "code",
-      "source": [
+        "letters[1] = 'R'\n",
+        "\n",
         "# 値の確認\n",
-        "numbers"
+        "letters"
       ],
       "execution_count": null,
       "outputs": []
@@ -583,19 +574,7 @@
       "cell_type": "code",
       "source": [
         "# 末尾の要素にアクセス\n",
-        "numbers[-1]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "jP5fkl3V54WL"
-      },
-      "cell_type": "code",
-      "source": [
-        "# 末尾から3番目の要素にアクセス\n",
-        "numbers[-3]"
+        "letters[-1]"
       ],
       "execution_count": null,
       "outputs": []
@@ -619,7 +598,7 @@
       },
       "cell_type": "code",
       "source": [
-        "numbers[0:2]"
+        "letters[0:2]"
       ],
       "execution_count": null,
       "outputs": []
@@ -630,7 +609,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "`開始位置:終了位置` と指定することで、開始位置から**終了位置のひとつ手前**までの要素を抽出します。 \n",
+        "`開始位置:終了位置` と指定することで、開始位置から**終了位置のひとつ手前**までの要素を抽出します。\n",
         "終了位置に指定したインデックスの値は含まれないことに注意してください。\n",
         "\n",
         "また、指定する開始番号が `0` である場合、以下のような略記がよく用いられます。"
@@ -642,7 +621,7 @@
       },
       "cell_type": "code",
       "source": [
-        "numbers[:2]"
+        "letters[:2]"
       ],
       "execution_count": null,
       "outputs": []
@@ -666,7 +645,7 @@
       },
       "cell_type": "code",
       "source": [
-        "numbers[1:]"
+        "letters[1:]"
       ],
       "execution_count": null,
       "outputs": []
@@ -677,13 +656,25 @@
       },
       "cell_type": "markdown",
       "source": [
-        "この場合は、取り出される要素の個数は `len(numbers) - 1` 個となることに注意してください。\n",
+        "この場合は、取り出される要素の個数は `len(letters) - 1` 個となることに注意してください。\n",
         "\n",
-        "以上から、`numbers[:2]` と `numbers[2:]` は、ちょうど 2 個目の要素を境に `numbers` の要素を 2 分割した前半部分と後半部分になっています。\n",
+        "以上から、`letters[:2]` と `letters[2:]` は、ちょうど 2 個目の要素を境に `letters` の要素を 2 分割した前半部分と後半部分になっています。\n",
         "ここで、インデックスが 2 の要素自体は**後半部に含まれる**ということに注意してください。\n",
         "\n",
         "また、開始位置も終了位置も省略した場合は、すべての要素が選択されます。"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ここまでの操作は文字列型にも同様に使えます\n",
+        "'programming'[2:-2]"
+      ],
+      "metadata": {
+        "id": "jtO5AjOgV4gX"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "metadata": {
@@ -694,7 +685,7 @@
         "リストを使う際に頻出する操作として、**リストへの値の追加**があります。\n",
         "リスト型には `append()` というメソッドが定義されており、これを用いてリストの末尾に新しい値を追加することができます。\n",
         "\n",
-        "上記の `numbers` に値を追加してみましょう。"
+        "上記の `letters` に値を追加してみましょう。"
       ]
     },
     {
@@ -703,9 +694,9 @@
       },
       "cell_type": "code",
       "source": [
-        "# 末尾に 2.5 を追加\n",
-        "numbers.append(2.5)\n",
-        "numbers"
+        "# 末尾に数字を追加\n",
+        "letters.append(2.5)\n",
+        "letters"
       ],
       "execution_count": null,
       "outputs": []
@@ -739,52 +730,6 @@
     },
     {
       "metadata": {
-        "id": "nV8Lp5jLNO66"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "### 辞書\n",
-        "\n",
-        "リストやタプルでは、複数の値をまとめて扱うことができました。\n",
-        "そこで、定期テストの結果をまとめることを考えてみましょう。\n",
-        "\n",
-        "例えば、数学 90 点、理科 75 点、英語 80 点だったという結果を `scores = [90, 75, 80]` とリストで表してみます。\n",
-        "しかし、これでは**何番目がどの教科の点数に対応するか**、一見して分かりにくいと思われます。\n",
-        "\n",
-        "Python の `dict` 型は、**キー (key)** とそれに対応する**値 (value)** をセットにして格納することができる型であり、このようなときに便利です。\n",
-        "\n",
-        "リストやタプルでは、各要素にアクセスする際に整数のインデックスを用いていましたが、辞書ではキーでインデックス化されているため、整数や文字列など、色々なものを使って要素を指定することができます。\n",
-        "\n",
-        "辞書は `{}` を用いて定義し、要素にアクセスする際には、リストやタプルと同様に `[ ]` を使用し、`[ ]` の中にキーを指定して対応する値を取り出します。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "NyxphI5fNMO8"
-      },
-      "cell_type": "code",
-      "source": [
-        "# 辞書を定義\n",
-        "scores = {'Math': 90, 'Science': 75, 'English': 80 }\n",
-        "scores"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "M-V2XOEdNu2a"
-      },
-      "cell_type": "code",
-      "source": [
-        "# key が Math の value にアクセス\n",
-        "scores['Math'] "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "oELnTpERNwCQ"
       },
       "cell_type": "markdown",
@@ -802,13 +747,11 @@
       },
       "cell_type": "markdown",
       "source": [
-        "`for` 文の文法は上図のとおりです。\n",
+        "`for` 文の文法は上図のとおりです。ヘッダー部分の最後のコロンを忘れやすいので注意！\n",
         "\n",
-        "**イテラブルオブジェクト (iterable object)** とは、反復可能オブジェクトのことであり、要素を一度に 1 つずつ返せるオブジェクトのことを指します。\n",
+        "**イテラブルオブジェクト (iterable object)** とは、反復可能オブジェクトのことであり、要素を一度に 1 つずつ返せるオブジェクト（リストなど）のことを指します。\n",
         "`range()` という組み込み関数を使うと、引数に与えた整数の回数だけ順番に整数を返すイテラブルオブジェクトを作ることができます。\n",
-        "`range(5)` と書くと、0, 1, 2, 3, 4 という整数 5 つを順番に返すイテラブルオブジェクトになります。\n",
-        "\n",
-        "後述しますが、このイテラブルオブジェクトとして、リストやタプルも指定することができます。"
+        "`range(5)` と書くと、0, 1, 2, 3, 4 という整数 5 つを順番に返すイテラブルオブジェクトになります。"
       ]
     },
     {
@@ -875,56 +818,10 @@
       "cell_type": "code",
       "source": [
         "for i in range(3):\n",
-        "    print('{}さん'.format(names[i]))"
+        "    print(names[i] + 'さん')"
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "msGhS1ISv9dN"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "つぎに、さらに汎用性の高いプログラムを目指します。\n",
-        "\n",
-        "上記のコードに関して、汎用性が低い点として、`range(3)` のように `3` という値を直接記述していることが挙げられます。\n",
-        "この `3` はリストの要素の数を意味していますが、リストの要素の数が変わると、このプログラムも書き換える必要があり、手間がかかったり、ミスが発生する原因となったりします。\n",
-        "\n",
-        "リスト内の要素の数は、組み込み関数である `len()` を用いて取得できるため、これを使用した汎用性の高いプログラムに書き換えましょう。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "e4gbC4CIOzve"
-      },
-      "cell_type": "code",
-      "source": [
-        "len(names)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "4i21QYMwPB1C"
-      },
-      "cell_type": "code",
-      "source": [
-        "for i in range(len(names)):\n",
-        "    print('{}さん'.format(names[i]))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "9wx-qJovPEC0"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "これでリストの要素数に依存しないプログラムにすることができました。"
-      ]
     },
     {
       "metadata": {
@@ -943,7 +840,7 @@
       "source": [
         "# リストをイテラブルオブジェクトに指定\n",
         "for name in names:\n",
-        "    print('{}さん'.format(name))"
+        "    print(name + 'さん')"
       ],
       "execution_count": null,
       "outputs": []
@@ -1033,7 +930,7 @@
       "source": [
         "a = 0\n",
         "\n",
-        "if a > 0:    \n",
+        "if a > 0:\n",
         "    print('0より大きいです')\n",
         "elif a == 0:\n",
         "    print('０です')\n",
@@ -1077,7 +974,9 @@
         "\n",
         "while count < 3:\n",
         "    print(count)\n",
-        "    count += 1"
+        "    count = count + 1\n",
+        "\n",
+        "print('ループが終了しました count =', count)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1110,7 +1009,7 @@
         "while True:\n",
         "    print(count)\n",
         "    count += 1\n",
-        "    \n",
+        "\n",
         "    if count == 3:\n",
         "        break"
       ],
@@ -1125,76 +1024,6 @@
       "source": [
         "`count` の値が 3 と等しいかどうかが毎回チェックされ、等しくなっていれば `break` 文が実行されて `while` ループが終了します。"
       ]
-    },
-    {
-      "metadata": {
-        "id": "2rtEn2APv9db"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "`while` 文を使って、指定された条件を満たして**いない**間ループを繰り返すという処理も書くことができます。`while` 文自体の使い方は同じですが、条件を反転して与えることで、与えた条件が `False` である間繰り返されるようにすることができます。\n",
-        "\n",
-        "これには、ブール値を反転する `not` を用います。\n",
-        "`not True` は `False` を返し、`not False` は `True` を返します。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "0PucNNA0v9db"
-      },
-      "cell_type": "code",
-      "source": [
-        "not True"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "9iX7JkEOv9db"
-      },
-      "cell_type": "code",
-      "source": [
-        "not False"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "TkSUZ1iZv9dc"
-      },
-      "cell_type": "code",
-      "source": [
-        "not 1 == 2"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "0aM2yZ7qv9dd"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "このように、`not` はあとに続くブール値を反転します。\n",
-        "これを用いて、`count` が 3 **ではない**限りループを繰り返すというコードを `while` 文を使って書いてみましょう。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "vhvBNYCXv9dd"
-      },
-      "cell_type": "code",
-      "source": [
-        "count = 0\n",
-        "\n",
-        "while not count == 3:\n",
-        "    print(count)\n",
-        "    count += 1"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1316,7 +1145,7 @@
       "cell_type": "markdown",
       "source": [
         "#練習問題\n",
-        "##モンテカルロ法による円周率の推定 \n",
+        "##モンテカルロ法による円周率の推定\n",
         "(http://yay.cla.kobe-u.ac.jp/~jm/edu/2016/PB/python3/python3ex01.html)  \n",
         "![image](https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Pi_30K.gif/220px-Pi_30K.gif)  \n",
         "モンテカルロ・シミュレーションは、コンピュータ上で仮想的に実験をしてみて、そこから結果を求める問題の解き方です。ここでは円周率を求めてみましょう。\n",
@@ -1365,12 +1194,17 @@
         "\n",
         "for i in range(n):\n",
         "  # x, y座標を生成する処理\n",
-        "  \n",
+        "  x =\n",
+        "  y =\n",
+        "\n",
         "  # ダーツが円の中に入ったか判定する処理\n",
+        "  if\n",
         "\n",
-        "  # もし円の中ならncを1増やす処理\n",
+        "    # もし円の中ならncを1増やす処理\n",
+        "    nc =\n",
         "\n",
-        "pi = \n",
+        "# piを計算\n",
+        "pi =\n",
         "print(pi)"
       ],
       "metadata": {
@@ -1386,7 +1220,7 @@
         "def calc_pi(n):\n",
         "\n",
         "\n",
-        "  \n",
+        "\n",
         "  return pi"
       ],
       "metadata": {
