Colab を使用して作成されました

--- a/Basics_of_Python.ipynb
+++ b/Basics_of_Python.ipynb
@@ -6,6 +6,7 @@
       "name": "Basics_of_Python.ipynb",
       "provenance": [],
       "private_outputs": true,
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1178,18 +1179,31 @@
     {
       "cell_type": "code",
       "source": [
+        "# 2乗は次のように書きます\n",
+        "3 ** 2"
+      ],
+      "metadata": {
+        "id": "HmXDAM-Pob4s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 円周率を計算するプログラムを完成させましょう\n",
         "n = 100000\n",
         "nc = 0\n",
         "\n",
         "for i in range(n):\n",
-        "  # x, y座標を生成する処理\n",
+        "  # x, y座標をランダムに生成\n",
         "  x =\n",
         "  y =\n",
         "\n",
-        "  # ダーツが円の中に入ったか判定する処理\n",
+        "  # もしダーツが円の中に入ったなら\n",
         "  if\n",
         "\n",
-        "    # もし円の中ならncを1増やす処理\n",
+        "    # ncを1増やす\n",
         "    nc =\n",
         "\n",
         "# piを計算\n",
