Colab を使用して作成されました

--- a/tutorial_pandas_numpy.ipynb
+++ b/tutorial_pandas_numpy.ipynb
@@ -431,7 +431,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## HOME WORK"
+        "## 練習問題"
       ],
       "metadata": {
         "id": "CXdd1-EkZNQ4"
@@ -456,7 +456,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 1: 1世帯あたりの部屋数が最も多い3地区を表示してください\n",
+        "### 1: 1世帯あたりの部屋数トップ3を表示してください\n",
         "\n",
         "計算結果の`Series`を新たなカラムとして`DataFrame`に追加できます  \n",
         "`df['new_column'] = df['col1'] * df['col2']`"
@@ -485,7 +485,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "median_income = ...\n",
+        "median_house_value = ...\n",
+        "plt.scatter(median_income, median_house_value)\n",
+        "plt.show()"
+      ],
       "metadata": {
         "id": "mzG_uisynGgr"
       },
@@ -497,6 +502,7 @@
       "source": [
         "### 3: median_incomeとmedian_house_valueの相関係数を求める\n",
         "\n",
+        "地区ごとのmedian_incomeとmedian_house_valueには相関があるといえるでしょうか？\n",
         "`df.corr()`関数を使用して相関係数を算出しましょう。median_incomeとmedian_house_valueカラムを抽出し、新たなDataFrameを作成してから計算してください"
       ],
       "metadata": {
@@ -521,12 +527,12 @@
         "\n",
         "\n",
         "相関係数の求め方\n",
-        "- それぞれの変数の平均値を求める\n",
-        "- それぞれの変数の偏差（数値 － 平均値）を求める\n",
-        "- それぞれの変数の分散（偏差の二乗平均）を求める\n",
-        "- それぞれの変数の標準偏差（分散の正の平方根）を求める\n",
-        "- 共分散（偏差の積の平均）を求める\n",
-        "- 共分散を 2 つの変数の標準偏差で割って相関係数を得る\n"
+        "1. それぞれの変数(median_income, median_house_value)の平均値を求める\n",
+        "2. それぞれの変数の偏差（各値 － 平均値）を求める\n",
+        "3. それぞれの変数の分散（偏差の二乗平均）を求める\n",
+        "4. それぞれの変数の標準偏差（分散の正の平方根）を求める\n",
+        "5. 共分散（偏差の積の平均）を求める\n",
+        "6. 共分散を 「2変数の標準偏差の積」で割って相関係数を得る\n"
       ],
       "metadata": {
         "id": "hAvCy8OHnG8h"
@@ -680,6 +686,81 @@
         "\n",
         "df"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "population_by_households = df['total_rooms'] / df['households']\n",
+        "sorted = population_by_households.sort_values(ascending=False)\n",
+        "top3 = sorted.head(3)\n",
+        "print(top3)"
+      ],
+      "metadata": {
+        "id": "gMCyEA8ka0RC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "median_income = df['median_income']\n",
+        "median_house_value = df['median_house_value']\n",
+        "plt.scatter(median_income, median_house_value)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "fcHEurvjcCUE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df = pd.DataFrame([median_income, median_house_value]).T\n",
+        "new_df.corr()"
+      ],
+      "metadata": {
+        "id": "w5aHOfIucipE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "income = df['median_income']\n",
+        "housev = df['median_house_value']\n",
+        "\n",
+        "# 1\n",
+        "mean_income = income.mean()\n",
+        "mean_housev = housev.mean()\n",
+        "\n",
+        "# 2\n",
+        "deviation_income = income - mean_income\n",
+        "deviation_housev = housev - mean_housev\n",
+        "\n",
+        "# 3\n",
+        "variance_income = (deviation_income ** 2).mean()\n",
+        "variance_housev = (deviation_housev ** 2).mean()\n",
+        "\n",
+        "# 4\n",
+        "standard_deviation_income = variance_income ** 0.5\n",
+        "standard_deviation_housev = variance_housev ** 0.5\n",
+        "\n",
+        "# 5\n",
+        "covariance = (deviation_income * deviation_housev).mean()\n",
+        "\n",
+        "# 6\n",
+        "correlation_coefficient = covariance / (standard_deviation_income * standard_deviation_housev)\n",
+        "print(correlation_coefficient)\n"
+      ],
+      "metadata": {
+        "id": "xxoXI-n8eiLf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
