Colab を使用して作成されました

--- a/tutorial_pandas_numpy.ipynb
+++ b/tutorial_pandas_numpy.ipynb
@@ -503,7 +503,7 @@
         "### 3: median_incomeとmedian_house_valueの相関係数を求める\n",
         "\n",
         "地区ごとのmedian_incomeとmedian_house_valueには相関があるといえるでしょうか？\n",
-        "`df.corr()`関数を使用して相関係数を算出しましょう。median_incomeとmedian_house_valueカラムを抽出し、新たなDataFrameを作成してから計算してください"
+        "`df.corr()`関数は各カラムどうしの相関係数を算出し、新しいデータフレームを作成します。そのデータフレームから目的の数値を抽出してください。"
       ],
       "metadata": {
         "id": "CDVXF_EWrW1X"
@@ -718,14 +718,28 @@
     {
       "cell_type": "code",
       "source": [
-        "new_df = pd.DataFrame([median_income, median_house_value]).T\n",
-        "new_df.corr()"
+        "df.corr()['median_income']['median_house_value']"
       ],
       "metadata": {
-        "id": "w5aHOfIucipE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w5aHOfIucipE",
+        "outputId": "027ae3eb-a688-4d60-cc8f-1642ad92c199"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6918706037806676"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "code",
