Colab を使用して作成されました

--- a/tutorial_pandas_numpy.ipynb
+++ b/tutorial_pandas_numpy.ipynb
@@ -431,6 +431,77 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## 可視化\n",
+        "データを図示するには`matplotlib`というパッケージを利用します。https://matplotlib.org/cheatsheets/\n",
+        "![plt](https://matplotlib.org/cheatsheets/_images/cheatsheets-1.png)"
+      ],
+      "metadata": {
+        "id": "w-Jso1SKtcp4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# パッケージのインポート\n",
+        "import matplotlib.pyplot as plt\n",
+        "# ノートブック環境でのおまじない\n",
+        "%matplotlib inline"
+      ],
+      "metadata": {
+        "id": "cAuXndnQvK97"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# median_house_valueのヒストグラム\n",
+        "plt.hist(df['median_house_value'])\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "IPkfK-aGuYge"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 経度と緯度を散布図で描写すると\n",
+        "plt.scatter(df['latitude'], df['longitude'])\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "bpGa-9A2uZD1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# トップの図もmatplotlibで作成できます\n",
+        "fig, ax = plt.subplots()\n",
+        "sc = ax.scatter(df['longitude'], df['latitude'], c=df['median_house_value'], s=df['population']/100, alpha=0.2)  # 散布図\n",
+        "ax.legend(*sc.legend_elements(\"sizes\", num=3, fmt='{x:.3g}00'), title='population')  # 凡例の追加\n",
+        "ax.set_aspect('equal', adjustable='box')  # グラフを真四角に\n",
+        "ax.set_ylabel('latitude')  # y軸ラベル\n",
+        "ax.set_xlabel('longitude')  # x軸ラベル\n",
+        "ax.set_title('California Housing Dataset')  # タイトル\n",
+        "fig.colorbar(sc, label='median_house_value')  # 右側のカラーバー追加\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "x0J7uRt1vChZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## 練習問題"
       ],
       "metadata": {
@@ -549,23 +620,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# おまけ：トップの図の生成\n",
-        "\n",
-        "%matplotlib inline\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "fig, ax = plt.subplots()\n",
-        "sc = ax.scatter(df['longitude'], df['latitude'], c=df['median_house_value'], s=df['population']/100, alpha=0.2)\n",
-        "ax.legend(*sc.legend_elements(\"sizes\", num=3, fmt='{x:.3g}00'), title='population')\n",
-        "ax.set_aspect('equal', adjustable='box')\n",
-        "ax.set_ylabel('latitude')\n",
-        "ax.set_xlabel('longitude')\n",
-        "ax.set_title('California Housing Dataset')\n",
-        "fig.colorbar(sc, label='median_house_value')\n",
-        "plt.savefig('California_Housing_Dataset.png', dpi=200)\n",
-        "plt.show()"
-      ],
+      "source": [],
       "metadata": {
         "id": "ialz4lbeZziw"
       },
@@ -721,25 +776,10 @@
         "df.corr()['median_income']['median_house_value']"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "w5aHOfIucipE",
-        "outputId": "027ae3eb-a688-4d60-cc8f-1642ad92c199"
+        "id": "w5aHOfIucipE"
       },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.6918706037806676"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
